[package]
name = "arpx"
description = "Automate and relate multiple processes."
version = "0.2.0"
license = "MIT"
readme = "README.md"
keywords = ["automation", "process", "concurrency", "multiplexer"]
authors = ["Jared Gorski <jaredgorski6@gmail.com>"]
repository = "https://github.com/jaredgorski/arpx"
edition = "2018"

[badges]
travis-ci = { repository = "jaredgorski/arpx" }

[[bin]]
name = "arpx"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.27.0"
crossbeam-channel = "0.3"
dirs = "2.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_yaml = "0.8.9"
