[package]
name = "arpx"
description = "Automate and relate multiple processes."
version = "0.4.1"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["automation", "process", "concurrency", "multiplexer"]
authors = ["Jared Gorski <jaredgorski6@gmail.com>"]
repository = "https://github.com/jaredgorski/arpx"
license-file = "LICENSE"
edition = "2021"

[badges]
travis-ci = { repository = "jaredgorski/arpx" }

[[bin]]
name = "arpx"
path = "src/main.rs"

[dependencies]
clap = "3.0.14"
crossbeam-channel = "0.5.2"
dirs = "4.0"
serde = { version = "1.0.99", features = ["derive"] }
serde_yaml = "0.8.9"
termcolor = "1.1"
