[package]
name = "arpx"
description = "Small-scale process orchestration"
version = "0.5.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["automation", "process", "concurrency", "multiplexer"]
authors = ["Jared Gorski <jaredgorski6@gmail.com>"]
repository = "https://github.com/jaredgorski/arpx"
license-file = "LICENSE"
edition = "2021"

[badges]
travis-ci = { repository = "jaredgorski/arpx" }

[[bin]]
name = "arpx"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.55", features = ["std"] }
arpx_job_parser = "0.1.12"
clap = { version = "3.0.14", features = ["cargo"] }
crossbeam-channel = "0.5.2"
log = "0.4.14"
log4rs = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
